<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.temple.finalproject.GraphFragment">


    <Button
        android:text="@string/one_day_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:id="@+id/oneDay"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@android:color/background_light"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:id="@+id/graphImageView" />

    <Button
        android:text="@string/five_day_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fiveDay"
        android:layout_alignBaseline="@+id/oneDay"
        android:layout_alignBottom="@+id/oneDay"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/one_month_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/fiveDay"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:id="@+id/oneMonth" />
</RelativeLayout>
